modelo parcial II

--- a/Unidad 4/CO.ipynb
+++ b/Unidad 4/CO.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "2dd262b2",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "109120cc",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,10 @@
       "⎡                  ⎛           2          ⎞  ⎛           2          ⎞⎤\n",
       "⎢                  ⎜ ⎛1   √3⋅ⅈ⎞   1   √3⋅ⅈ⎟  ⎜ ⎛1   √3⋅ⅈ⎞   1   √3⋅ⅈ⎟⎥\n",
       "⎢(-1, -1), (0, 0), ⎜-⎜─ - ────⎟ , ─ - ────⎟, ⎜-⎜─ + ────⎟ , ─ + ────⎟⎥\n",
-      "⎣                  ⎝ ⎝2    2  ⎠   2    2  ⎠  ⎝ ⎝2    2  ⎠   2    2  ⎠⎦\n"
+      "⎣                  ⎝ ⎝2    2  ⎠   2    2  ⎠  ⎝ ⎝2    2  ⎠   2    2  ⎠⎦\n",
+      "⎡6⋅x   3 ⎤\n",
+      "⎢        ⎥\n",
+      "⎣ 3   6⋅y⎦\n"
      ]
     }
    ],
@@ -116,6 +119,7 @@
     "    Eq(fy, 0)\n",
     "], [x,y]))\n",
     "\n",
+    "pprint(hessian(Matrix([x**3 + y**3 + 3*x*y]), [x,y]))\n",
     "\n"
    ]
   },
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "id": "9efeb0f1",
    "metadata": {},
    "outputs": [
@@ -150,10 +154,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f94504afee0>]"
+       "[<matplotlib.lines.Line2D at 0x7fd1f11911f0>]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "id": "3871c97e",
    "metadata": {},
    "outputs": [
@@ -296,6 +300,7 @@
     "pprint(C)\n",
     "\n",
     "f_c = f_z - f_y * J.inv('CH') * C\n",
+    "\n",
     "print('\\n')\n",
     "pprint(f_c)\n",
     "\n",
@@ -319,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "d2f31821",
    "metadata": {},
    "outputs": [
@@ -358,7 +363,7 @@
     "x_0 = (0,0,0)\n",
     "\n",
     "constraints = (\n",
-    "    {'type': 'eq', 'fun': g_1},\n",
+    "    {'type': 'ineq', 'fun': g_1},\n",
     "    {'type': 'eq', 'fun': g_2}\n",
     ")\n",
     "\n",
@@ -391,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "id": "63822000",
    "metadata": {},
    "outputs": [
@@ -416,10 +421,18 @@
     "    Eq(diff(L, x_3), 0),\n",
     "    Eq(diff(L, lambda_1), 0),\n",
     "    Eq(diff(L, lambda_2), 0),\n",
-    "], [x_1, x_2, x_3, lambda1, lambda2])\n",
+    "], [x_1, x_2, x_3, lambda_1, lambda_2])\n",
     "\n",
     "pprint(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c3de9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
